[package]
name = "crypto_lib"
version = "0.1.0"
authors = ["Fred Liu <hunterfredliu@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
hex-literal = "0.2"
ring = "0.16"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fasthash = "0.4"
time-test = "0.2.2"
time = { version = "0.2", default-features = false }
rand = "0.6"
blake3 = "0.3.3"


# for test purpose
merklemountainrange = "0.0.1"
blake2 = "0.8.1"
ckb-merkle-mountain-range = "0.3.0"
bytes = "0.5.4"
blake2b-rs = "0.1.5"

[dependencies.digest]
version = "0.8.0"

[dependencies.tari_utilities]
version = "0.0.1"
[dev-dependencies.blake2]
version = "0.8.0"

